--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 <!--navbar--->
 <section id="header">
 <nav class="navbar navbar-expand-md">
+  <div class="container">	
   <a href="" class="navbar-brand text-uppercase text-white">Gymnasia</a>
   
   <button class="navbar-toggler" style="border:none" data-toggle="collapse" data-target="#mynavbar">
@@ -35,6 +36,7 @@
     <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
     </ul>
   </div>
+</div>	  
 </nav>
 </section>
 <!---header section start--->
